--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -62,16 +62,34 @@
     "participants": {
       "participants": "Participants",
       "email": "EMail",
-      "date": "Date"
+      "date": "Date",
+      "nick-name": "Nickname"
     },
     "liveUrl-placeholder": "Live URL",
     "btn-update": "Update",
     "msgs": {
-      "no-participants-found": "No participants registered yet!"
+      "no-participants-found": "No participants registered yet!",
+      "loading-participants": "Loading participants...",
+      "no-raffles-found": "No raffles found!",
+      "raffle-created": "Raffle created!"
     },
     "btn-raffle": "Draw",
     "btn-cancelar": "Cancel",
-    "status": ["Active", "Drawn", "Canceled"]
+    "status": [
+      "Active",
+      "Drawn",
+      "Canceled"
+    ],
+    "btn-close": "Close",
+    "btn-new": "New",
+    "btn-view": "View",
+    "create-date": "Raffle Date:",
+    "create-date-placeholder": "Raffle Date",
+    "draw-winners": "Draw Winners",
+    "raffles-title": "Raffles",
+    "status-header": "Status",
+    "winners": "Winners:",
+    "winners-placeholder": "Number of winners"
   },
   "register": {
     "header": "Enter your information",
@@ -89,12 +107,20 @@
       "error-email-exists": "Email allready exists. <br/>Please login instead.",
       "error-pass-weak": "Password is to weak",
       "error-password-mismatch": "Passwords don't match"
-    }
+    },
+    "nickname-placeholder": "Enter your Nickname"
   },
   "account": {
     "account-data": "Account Details",
     "email": "EMail:",
     "name": "Name:",
-    "name-placeholder": "Display Name"
+    "name-placeholder": "Display Name",
+    "btn-update": "Update",
+    "channelURL": "Channel URL",
+    "channel-url-placeholder": "Enter your live channel URL",
+    "confirm-password": "Re-type password",
+    "confirm-password-placeholder": "Re-type password",
+    "password": "Password:",
+    "password-placeholder": "Enter a password (min 8 characters)"
   }
 }
